Updated the summary. Added in the image for the hardware override. Updated the CSS to widen the content section.

--- a/book.toml
+++ b/book.toml
@@ -3,3 +3,6 @@ authors = ["GameGuy"]
 language = "en"
 src = "src"
 title = "Ferrum Developer Documentation"
+
+[output.html]
+additional-css = ["custom.css"]
