Updated cSpell dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "ferrumllc",
         "gameguythrowaway",
         "kmbox",
-        "MAKCU"
+        "MAKCU",
+        "multidown",
+        "multipress",
+        "multiup"
     ]
 }
