--- a/book.toml
+++ b/book.toml
@@ -3,3 +3,10 @@ authors = ["GameGuy"]
 language = "en"
 src = "src"
 title = "Ferrum Developer Documentation"
+
+[output.linkcheck]
+follow-web-links = false
+traverse-parent-directories = false
+user-agent = "mdbook-linkcheck-0.4.0"
+cache-timeout = 43200
+warning-policy = "error"
