--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -29,7 +29,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MDBOOK_VERSION: 0.4.49
+      MDBOOK_VERSION: 0.5.2
+      MDBOOK_LINKCHECK2_VERSION: 0.11.0
     steps:
       - uses: actions/checkout@v4
       - name: Install mdBook
@@ -37,6 +38,7 @@ jobs:
           curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook
+          cargo install --version ${MDBOOK_LINKCHECK2_VERSION} mdbook-linkcheck2
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
