--- a/book.toml
+++ b/book.toml
@@ -4,9 +4,9 @@ language = "en"
 src = "src"
 title = "Ferrum Developer Documentation"
 
-[output.linkcheck]
-follow-web-links = false
-traverse-parent-directories = false
-user-agent = "mdbook-linkcheck2-0.11.0"
-cache-timeout = 43200
-warning-policy = "error"
+#[output.linkcheck2]
+#follow-web-links = false
+#traverse-parent-directories = false
+#user-agent = "mdbook-linkcheck2-0.11.0"
+#cache-timeout = 43200
+#warning-policy = "error"
